- Summary: TED - Issue 53183 [BZ]TVT/DVT3.8:TCT180: [DVT KO] overlapped
- Description of Issue: 
ScriptingReference.css was incorrect.

- Description of Resolution:
Fixed ScriptingReference.css.

- TED(s) Resolved:
53183

- Regression ( Yes/No ):
No.

- Code Owner Team: 
Devcomm

- Code Reviewers: 
Forest

- Project ID: 
N/A

- Manual Test Description:
N/A

- Tests Automated Cases Executed: 
N/A

- Special Notes: 
None.

--- a/docs/org.eclipse.birt.doc/birt/css/ScriptingReference.css
+++ b/docs/org.eclipse.birt.doc/birt/css/ScriptingReference.css
@@ -1057,11 +1057,10 @@ p.N_sb_ScanBold, div.N_sb_ScanBold
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
-  margin-bottom: 0px;
-  margin-left: -40px;
-  margin-right: 0px;
-  margin-top: -23px;
-  position: relative;
+  margin-bottom: 6pt;
+  margin-left: 0pt;
+  margin-right: 0pt;
+  margin-top: 6pt;
   text-align: left;
   text-indent: 0pt;
   text-transform: none;
